fixed grid align on firefox

--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -27,3 +27,9 @@
 {
     align-items: center;
 }
+
+.outer-grid {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
